--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
-    "editor.codeActionsOnSave": {
-        "source.fixAll": true,
-        "source.fixAll.eslint": true
-    }
-    
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true,
+    // 使用eslint来fix，包括格式化会自动fix和代码质量检查会给出错误提示
+    "source.fixAll.eslint": true
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode", // 默认的代码格式化工具
+  "editor.formatOnSave": true, // 开启保存文件自动格式化代码
+  "prettier.requireConfig": true // 需要Prettier的配置文件
 }
