--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "start": "nodemon -x babel-node src/index.js",
     "lint": "npx eslint src --ext .js,.vue"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "echo \"[Husky] pre-commit\""
+    }
+  },
   "babel": {
     "presets": [
       "@babel/preset-env"
@@ -39,12 +44,18 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.23.0",
-    "@babel/core": "^7.23.2",
-    "@babel/eslint-parser": "^7.22.15",
+    "@babel/core": "^7.23.3",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.23.2",
     "eslint": "^8.53.0",
-    "eslint-plugin-vue": "^9.18.1",
-    "nodemon": "^3.0.1"
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "nodemon": "^3.0.1",
+    "prettier": "3.1.0"
+  },
+  "dependencies": {
+    "husky": "^8.0.3"
   }
 }
