--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "start2": "node --es-module-specifier-resolution=node src/index.mjs",
     "start3": "babel-node src/index.js",
     "start": "nodemon -x babel-node src/index.js",
-    "lint": "npx eslint src --ext .js,.vue"
+    "lint": "prettier --write & eslint src --ext .js,.vue",
+    "lint-staged": "lint-staged",
+    "prepare": "husky install"
   },
-  "husky": {
-    "hooks": {
-      "applypatch-msg": "echo \"[Husky] applypatch-msg\"",
-      "pre-applypatch": "echo \"[Husky] pre-applypatch\"",
-      "post-applypatch": "echo \"[Husky] post-applypatch\"",
-      "pre-commit": "echo \"[Husky] pre-commit\""
-    }
+  "lint-staged": {
+    "src/**/*.js": [
+      "echo 22"
+    ]
   },
   "babel": {
     "presets": [
@@ -55,10 +54,10 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
     "nodemon": "^3.0.1",
     "prettier": "3.1.0"
   },
-  "dependencies": {
-    "husky": "^8.0.3"
-  }
+  "dependencies": {}
 }
