--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "lint-staged": {
     "src/**/*.js": [
-      "echo 22"
+      "npm run lint"
     ]
   },
   "babel": {
@@ -55,7 +55,7 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
+    "lint-staged": "^11.2.6",
     "nodemon": "^3.0.1",
     "prettier": "3.1.0"
   },
